--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
     <div class="form-group field">
-      <%= form.input :category, input_html: { class: "form-control" }, label: false, placeholder: "Categoria" %>
+      <%= form.input :category_id, collection: current_user.categories, input_html: { class: "form-control" }, label: false, prompt: "Categoria" %>
     </div>
     <div class="form-group field">
       <%= form.input :name, input_html: { class: "form-control" }, placeholder: "Nome, ex.: Cozinhar", label: false %>
@@ -23,7 +23,7 @@
       <%= form.input :end_time, as: :string, input_html: { class: "form-control" }, placeholder: "Fim, ex.: 00:00", label: false %>
     </div>
     <div class="form-group field">
-      <%= form.input :mastery, input_html: { class: "form-control" }, placeholder: "Masteria, ex.: 7.5", label: false %>
+      <%= form.input :mastery, input_html: { class: "form-control" }, placeholder: "Maestria, ex.: 7.5", label: false %>
     </div>
     <div class="form-group field">
       <%= form.input :pleasure, input_html: { class: "form-control" }, placeholder: "Prazer, ex.: 8.5", label: false %>
