--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,8 +1,23 @@
 
 <% if user_signed_in? %>
-  <h1>Lista de atividades</h1>
+
+  <%= content_for :date_title do %>
+    Rotina &ndash; <%= DateTime.now.to_s(:nice_date) %>
+  <% end %>
+  <h3>
+    <% if content_for(:date_title) %>
+      <%= yield :date_title %>
+    <% else %>
+      Minha Rotina
+    <% end %>
+  </h3>
   <br>
-  <%= link_to 'Nova Atividade', new_activity_path, class: "btn btn-secondary" %><br>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col text-center"><%= link_to 'Nova Atividade', new_activity_path, class: "btn btn-secondary" %></div>
+      <div class="col text-center"><%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %></div> 
+    </div><br>
+  </div>
   <table class="table table-dark table-striped table-hover">
     <thead>
       <tr>
@@ -22,14 +37,9 @@
         <% if activity.user == current_user %>
           <tr>
             <td><%= link_to activity.name, activity, class: "btn btn-secondary btn-sm"%>
-            <td><%= activity.category %></td>
-            <td><% if activity.start_time? %>
-                  <%= activity.start_time.to_formatted_s(:time) %>
-                <% end %>
-            </td>
-            <td><% if activity.end_time? %>
-                  <%= activity.end_time.to_formatted_s(:time) %>
-                <% end %></td>
+            <td><%= activity.category.title %></td>
+            <td><%= activity.start_time.to_formatted_s(:time) if activity.start_time? %></td>
+            <td><%= activity.end_time.to_formatted_s(:time) if activity.end_time? %></td>
             <td><%= activity.mastery %></td>
             <td><%= activity.pleasure %></td>
             <td><%= activity.comment %></td>
@@ -43,7 +53,9 @@
   </table>
 
   <br>
-
+  <div class="row justify-content-center">
+    <%= link_to 'Ver todas as atividades', archives_index_path, class: "btn btn-secondary btn-lg" %>
+  </div>
   
 
 <% else %>
