Category/user visibility fix

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? %>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Categories</h1>
@@ -12,12 +14,14 @@
 
   <tbody>
     <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.title %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% if category.user == current_user %>
+        <tr>
+          <td><%= category.title %></td>
+          <td><%= link_to 'Show', category %></td>
+          <td><%= link_to 'Edit', edit_category_path(category) %></td>
+          <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
@@ -25,3 +29,4 @@
 <br>
 
 <%= link_to 'New Category', new_category_path %>
+<% end %>
