--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,10 @@
 <% if user_signed_in? %>
 
-<p id="notice"><%= notice %></p>
-
-<h1>Categories</h1>
+<h3><%= t 'activerecord.models.category' %></h3>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,5 +25,5 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Nova Categoria', new_category_path %>
 <% end %>
