--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @activity do |form| %>
   <% if activity.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
+      <h2><%= pluralize(activity.errors.count, "erro") %> proibiu essa ação de ser salva:</h2>
 
       <ul>
         <% activity.errors.full_messages.each do |message| %>
@@ -10,52 +10,34 @@
       </ul>
     </div>
   <% end %>
-    <% params %>
-    <h4><% if params[:category] %>
-      <%= t(params[:category]).capitalize %>
-    <% end %></h4>
     
-    <% if params[:category] %>
-      <%= form.input :category_id, id: :activity_category_id, input_html: { class: "form-control", type: :hidden, value: Category.where(title: params[:category], user_id: current_user.id).ids }, label: false %>
-    <% else %>
-        <div class="form-group field">
-          <%= form.input :category_id, collection: current_user.categories, input_html: { class: "form-control" }, label: false, prompt: "Categoria" %>
-        </div>
-    <% end %>
+  <div class="form-group field">
+    <%= form.input :category_id, collection: current_user.categories, input_html: { class: "form-control" }, label: false, prompt: "Categoria", required: true %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :start_time, as: :datetime, input_html: { class: "form-control" }, label: 'Hora' %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :name, input_html: { class: "form-control" }, placeholder: "Nome, ex.: Cozinhar", label: false %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :end_time, as: :datetime, input_html: { class: "form-control" }, label: false %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :mastery, input_html: { class: "form-control" }, placeholder: "Maestria, ex.: 7.5", label: false %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :pleasure, input_html: { class: "form-control" }, placeholder: "Prazer, ex.: 8.5", label: false %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :comment, as: :text, input_html: { class: "form-control" }, label: false, placeholder: "Comentário" %>
+  </div>
+  <div class="form-group field">
+    <%= form.input :user_id, id: :activity_user_id, input_html: { class: "form-control", type: :hidden, value: current_user.id }, label: false %>
+  </div>
+  <br/>
+  <div class="actions">
+      <%= form.submit class: "btn btn-secondary btn-lg" %>
+  </div>
 
-    <div class="form-group field">
-      <%= form.input :start_time, as: :datetime, input_html: { class: "form-control" }, label: 'Hora' %>
-    </div>
-    
-    <% if (params[:category] == 'thought') %>  
-      <%= form.input :name, input_html: { class: "form-control", type: :hidden, value: "Registro de pensamento" }, label: false %>  
-    <% elsif (params[:category] == 'habit') %>
-      <%= form.input :name, input_html: { class: "form-control", type: :hidden, value: "Registro de hábito" }, label: false %>
-      <!-- include type of habit, place... -->
-    <% else %>
-      <div class="form-group field">
-        <%= form.input :name, input_html: { class: "form-control" }, placeholder: "Nome, ex.: Cozinhar", label: false %>
-      </div>
-      <div class="form-group field">
-        <%= form.input :end_time, as: :datetime, input_html: { class: "form-control" }, label: false %>
-      </div>
-      <div class="form-group field">
-        <%= form.input :mastery, input_html: { class: "form-control" }, placeholder: "Maestria, ex.: 7.5", label: false %>
-      </div>
-      <div class="form-group field">
-        <%= form.input :pleasure, input_html: { class: "form-control" }, placeholder: "Prazer, ex.: 8.5", label: false %>
-      </div>
-    <% end %>
-
-    <div class="form-group field">
-      <% (params[:category] == ('thought' || 'habit') )? (comment_required= true) : (comment_required= false) %>
-      <%= form.input :comment, as: :text, input_html: { class: "form-control" }, label: false, placeholder: "Comentário", required: comment_required %>
-    </div>
-    <div class="form-group field">
-      <%= form.input :user_id, id: :activity_user_id, input_html: { class: "form-control", type: :hidden, value: current_user.id }, label: false %>
-    </div>
-    <br/>
-    <div class="actions">
-        <%= form.submit class: "btn btn-secondary btn-lg" %>
-    </div>
 <% end %>
