--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -16,13 +16,11 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col text-center">
-        <% current_user.categories.each do |cat| %>
-          <% if cat.user == current_user %>
-            <%= link_to ('Adicionar ' + t(cat.title)), new_activity_path(category: cat.title), class: "btn btn-secondary" %>
-          <% end %>
-        <% end %>
+        <%= link_to 'Nova ação', new_activity_path, class: "btn btn-secondary" %>
       </div>
-      <div class="col text-center"><%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %></div> 
+      <div class="col text-center">
+        <%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %>
+      </div> 
     </div><br>
   </div>
   <table class="table table-dark table-striped table-hover">
@@ -44,7 +42,7 @@
         <% if activity.user == current_user %>
           <tr>
             <td><%= link_to activity.name, activity, class: "btn btn-secondary btn-sm"%>
-            <td><%= activity.category.title %></td>
+            <td><%= activity.category.title.capitalize %></td>
             <td><%= activity.start_time.to_formatted_s(:time) if activity.start_time? %></td>
             <td><%= activity.end_time.to_formatted_s(:time) if activity.end_time? %></td>
             <td><%= activity.mastery %></td>
