--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', activity: @activity %>
 
 <br/>
-<%= link_to 'Voltar', activities_path, class: "btn btn-dark btn-lg" %>
+<%= link_to 'Voltar', root_path, class: "btn btn-dark btn-lg" %>
