--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -14,9 +14,7 @@
   <div class="form-group field">
     <%= form.input :category_id, collection: current_user.categories, input_html: { class: "form-control" }, label: false, prompt: "Categoria", required: true %>
   </div>
-  <div class="form-group field">
-    <%= form.input :start_time, as: :datetime, input_html: { class: "form-control" }, label: 'Hora' %>
-  </div>
+  <%= form.input :start_time, as: :datetime, label: 'Hora' %>
   <div class="form-group field">
     <%= form.input :name, input_html: { class: "form-control" }, placeholder: "Nome, ex.: Cozinhar", label: false %>
   </div>
