--- a/app/views/emotions/index.html.erb
+++ b/app/views/emotions/index.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Emotions</h1>
+<h1>Emoções</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Scale</th>
-      <th>Feelings</th>
-      <th>Trigger</th>
-      <th>Thought</th>
-      <th>Action</th>
+      <th>Escala</th>
+      <th>Sentimentos</th>
+      <th>Gatilho</th>
+      <th>Pensamento</th>
+      <th>Ação</th>
       <th colspan="3"></th>
     </tr>
   </thead>
