--- a/app/views/emotions/_form.html.erb
+++ b/app/views/emotions/_form.html.erb
@@ -28,7 +28,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit class: "btn btn-secondary btn-lg" %>
     
   </div>
 
