--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,8 +15,9 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col text-center">
-        <%= link_to 'Nova Ação', new_activity_path, class: "btn btn-secondary" %>
+        <%= link_to 'Nova Atividade', new_activity_path, class: "btn btn-secondary" %>
         <%= link_to 'Nova Emoção', new_emotion_path, class: "btn btn-secondary" %>
+        <%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %>
         <!-- <%= link_to 'Novo Hábito', new_activity_path, class: "btn btn-secondary" %>
         <% current_user.categories.each do |cat| %>
           <% if cat.title == 'thought' || cat.title == 'habit' || cat.title == 'action' %>
