--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,6 +1,9 @@
-<h3>Adicionar atividade</h3>
-
-<%= render 'form', activity: @activity %>
-
-<br/>
-<%= link_to 'Voltar', root_path, class: "btn btn-dark btn-lg" %>
+<h3 class="row justify-content-center">Nova atividade</h3>
+<br>
+<div class="row justify-content-center">
+    <div class="col-sm-6 border border-5 rounded rounded-3 p-3">
+        <%= render 'form', activity: @activity %>
+    </div>
+</div>
+<%= link_to 'Voltar', :back, class: "btn btn-outline-secondary" %>
+<br><br>
