--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Nova Categoria</h1>
-
-<%= render 'form', category: @category %>
-
-<%= link_to 'Back', categories_path %>
+<h3 class="row justify-content-center">Nova Categoria</h1>
+<br>
+<div class="row justify-content-center">
+    <div class="col-sm-6 border border-5 rounded rounded-3 p-3">
+        <%= render 'form', category: @category %>
+    </div>
+</div>
+<%= link_to 'Voltar', :back, class: "btn btn-outline-secondary" %>
+<br><br>
