--- a/app/views/emotions/index.html.erb
+++ b/app/views/emotions/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Escala</th>
-      <th>Sentimentos</th>
+      <th colspan="3">Sentimentos</th>
       <th>Gatilho</th>
       <th>Pensamento</th>
       <th>Ação</th>
