--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,17 @@
      <!-- <div class="col text-center"><%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %></div> 
     </div>--><br><br>
   </div>
+ <!-- <% @activities.each do |activity| %>
+    <% if activity.user == current_user %>
+      <% end %>
+  <% end %> 
+  <%= column_chart @activities.map { |activity|
+    {name: activity.name,
+    data: [{x: activity.start_time.strftime('%Y-%m-%d %H:%M:%S'), y: TimeDifference.between(activity.start_time, activity.end_time).in_minutes.to_i}]}
+  }, dataset: { minBarLength: 10}, stacked: true %>-->
+
+  <div id="calendar"></div>
+    
   <table class="table table-dark table-striped table-hover">
     <thead>
       <tr>
