--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,18 @@
  @import "fullcalendar"
  @import '@fullcalendar/timegrid/main.css';
  */
+ @media(max-width: 767px) {
+    .fc-toolbar.fc-header-toolbar {
+      display: flex;
+      flex-direction: column;
+    }
+    .fc-toolbar.fc-header-toolbar .fc-left {
+      order: 3;
+    }
+    .fc-toolbar.fc-header-toolbar .fc-center {
+      order: 1;
+    }
+    .fc-toolbar.fc-header-toolbar .fc-right {
+      order: 2;
+    }
+  }
