--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,12 +12,11 @@
   </h3>
   <br>
   
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col text-center">
-        <%= link_to 'Nova Atividade', new_activity_path, class: "btn btn-secondary" %>
-        <%= link_to 'Nova Emoção', new_emotion_path, class: "btn btn-secondary" %>
-        <%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %>
+    <div class="row">
+      <div class="col btn-group">
+        <%= link_to '+ Atividade', new_activity_path, class: "btn btn-primary" %>
+        <%= link_to '+ Emoção', new_emotion_path, class: "btn btn-primary" %>
+        <%= link_to '+ Categoria', new_category_path, class: "btn btn-secondary" %>
         <!-- <%= link_to 'Novo Hábito', new_activity_path, class: "btn btn-secondary" %>
         <% current_user.categories.each do |cat| %>
           <% if cat.title == 'thought' || cat.title == 'habit' || cat.title == 'action' %>
@@ -25,9 +24,9 @@
           <% end %>
         <% end %>-->
       </div>
+    </div>
      <!-- <div class="col text-center"><%= link_to 'Nova Categoria', new_category_path, class: "btn btn-secondary" %></div> 
-    </div>--><br><br>
-  </div>
+    </div>-->
  <!-- <% @activities.each do |activity| %>
     <% if activity.user == current_user %>
       <% end %>
@@ -36,7 +35,7 @@
     {name: activity.name,
     data: [{x: activity.start_time.strftime('%Y-%m-%d %H:%M:%S'), y: TimeDifference.between(activity.start_time, activity.end_time).in_minutes.to_i}]}
   }, dataset: { minBarLength: 10}, stacked: true %>-->
-
+  <br>
   <div id="calendar" style="width: 90%;" class="mx-auto"></div>
   <br><br>
   <table class="table table-dark table-striped table-hover">
