--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,9 +34,15 @@
   <%= column_chart @activities.map { |activity|
     {name: activity.name,
     data: [{x: activity.start_time.strftime('%Y-%m-%d %H:%M:%S'), y: TimeDifference.between(activity.start_time, activity.end_time).in_minutes.to_i}]}
-  }, dataset: { minBarLength: 10}, stacked: true %>-->
+  }, dataset: { minBarLength: 10}, stacked: true %>
   <br>
-  <div id="calendar" style="width: 90%;" class="mx-auto"></div>
+  <button class="btn btn-primary" id="calendarCollapser" type="button" data-toggle="collapse" data-target="#collapseCalendar" aria-expanded="false" aria-controls="collapseCalendar">
+    Calendário
+  </button>
+  <div class="collapse" id="collapseCalendar">
+      <br>-->
+      <div id="calendar" style="width: 90%;" class="mx-auto"></div>
+  
   <br><br>
   <table class="table table-dark table-striped table-hover">
     <thead>
