--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <!-- .to_s(:nice_date) -->
+  <!-- .to_s(:nice_date) 
   <%= content_for :date_title do %>
     Rotina &ndash; <%= I18n.l(Date.today, format: :long) %>
   <% end %>
@@ -10,7 +10,7 @@
       Minha Rotina
     <% end %>
   </h3>
-  <br>
+  <br>-->
   
     <div class="row">
       <div class="col btn-group">
@@ -41,8 +41,8 @@
   </button>
   <div class="collapse" id="collapseCalendar">
       <br>-->
-      <div id="calendar" style="width: 90%;" class="mx-auto"></div>
-  
+  <br>  
+  <div id="calendar" style="width: 90%;" class="mx-auto"></div>
   <br><br>
   <table class="table table-dark table-striped table-hover">
     <thead>
