--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,6 +44,7 @@
   <br>  
   <div id="calendar" style="width: 90%;" class="mx-auto"></div>
   <br><br>
+  <!--
   <table class="table table-dark table-striped table-hover">
     <thead>
       <tr>
@@ -76,7 +77,7 @@
         <% end %>
       <% end %>
     </tbody>
-  </table>
+  </table>-->
 
   <br>
   <div class="row justify-content-center">
