--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,13 +3,10 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :title, label: "Título" %>
-  </div>
+  <%= f.input :title, label: "Título", hint: "Tipo de atividade a ser cadastrada." %>
 
-  <div class="form-group field">
-      <%= f.input :user_id, id: :category_user_id, input_html: { class: "form-control", type: :hidden, value: current_user.id }, label: false %>
-    </div>
+  <%= f.input :user_id, id: :category_user_id, input_html: { class: "form-control", type: :hidden, value: current_user.id }, label: false %>
+  <%= f.input :color, as: :color, label: "Cor da categoria", hint: "Para visualização personalizada no calendário", input_html: { value: "#00e1ff" } %>
 
   <div class="row justify-content-center">
     <div class="form-actions">
