Tooltip fixed with tippy.js

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,6 +42,7 @@
   <div class="collapse" id="collapseCalendar">
       <br>-->
   <br>  
+  <div id="tooltip" role="tooltip">t<div id="arrow" data-popper-arrow></div></div>
   <div id="calendar" style="width: 90%;" class="mx-auto"></div>
   <br><br>
   <!--
