--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -20,7 +20,7 @@
             </li>
         <% else %>
             <li class="nav-item">
-                <%= link_to  "Registrar", new_user_registration_path, class: "nav-link" %>
+                <%= link_to  "Registrar", new_admin_user_path, class: "nav-link" %>
              </li>
             <li class="nav-item">
                 <%= link_to  "Entrar", new_user_session_path, class: "nav-link" %>
